--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-body { font-family: Arial; background: #000; color: #fff; }
+body { background-color: black; color: white; font-family: sans-serif; text-align: center; padding: 50px; }
