--- a/style.css
+++ b/style.css
@@ -1,1 +1,31 @@
-body { background-color: black; color: white; font-family: sans-serif; text-align: center; padding: 50px; }
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #000;
+    color: white;
+    text-align: center;
+    padding: 50px;
+}
+
+.red {
+    color: red;
+}
+
+.white {
+    color: white;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: red;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: darkred;
+}
